Fix border on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,7 @@ input {
   border: 4px double var(--color-secondary);
   border-left: 0;
   border-right: 0;
+  border-radius: 0;
   padding: calc(var(--root-spacing));
   margin: calc(var(--root-spacing) * 2) 0;
   font-family: var(--font-body);
